Make info title visible

--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,7 @@ button,
     background-color: #3882f6;
 }
 
-.information.header {
+.title {
     font-size: 36px;
     font-weight: bolder;
     color: #1f2937;
