--- a/css/style.css
+++ b/css/style.css
@@ -1,28 +1,81 @@
+body {
+    font-family: sans-serif;
+}
+
 .header,
 .footer {
     background-color: #1f2937;
+    padding: 5px 200px;
+}
+
+.hero {
+    padding: 50px 0px;
+    display: flex;
+}
+
+.sub-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.link {
+    list-style-type: none;
+    display: flex;
+    gap: 10px;
+
 }
 
 .main {
+    margin: 0%;
     font-size: 48px;
     font-weight: bolder;
     color: #f9faf8;
 }
 
 .link,
-.secondary {
+.secondary,
+.footer {
     font-size: 18px;
     color: #e5e7eb;
 }
 
-.logo {
+.logo,
+.action-text {
     font-size: 24px;
+    font-weight: bold;
     color: #f9faf8;
 }
 
-button,
 .action {
     background-color: #3882f6;
+    color: #f9faf8;
+    padding: 30px 100px;
+    margin: 100px 300px;
+    border-radius: 5px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.sub-text,
+.logo,
+.action-text,
+.quote.text,
+.quoter {
+    padding: 0px;
+    margin: 0px;
+}
+
+.action button {
+    border-color: #f9faf8;
+}
+
+button {
+    color: #f9faf8;
+    background-color: #3882f6;
+    padding: 5px 10px;
+    border-radius: 5px;
 }
 
 .title {
@@ -33,11 +86,21 @@ button,
 
 .quote {
     background-color: #e5e7eb;
+    padding: 50px 100px;
+    display: flex;
+    flex-direction: column;
+}
+.quoter{
+    align-self: flex-end;
 }
 
 .quote.text {
     font-size: 36px;
-    font-weight: light;
+    font-weight: lighter;
     font-style: italic;
     color: #1f2937;
+}
+
+.footer{
+    text-align: center;
 }
