--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
-body {
-    font-family: sans-serif;
+body{
+    font-family: Arial, Helvetica, sans-serif;
+    margin: 0%;
 }
-
 .header,
 .footer {
     background-color: #1f2937;
@@ -11,6 +11,7 @@ body {
 .hero {
     padding: 50px 0px;
     display: flex;
+    gap: 20px;
 }
 
 .sub-header {
@@ -52,7 +53,7 @@ body {
     color: #f9faf8;
     padding: 30px 100px;
     margin: 100px 300px;
-    border-radius: 5px;
+
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -75,7 +76,6 @@ button {
     color: #f9faf8;
     background-color: #3882f6;
     padding: 5px 10px;
-    border-radius: 5px;
 }
 
 .title {
@@ -86,11 +86,13 @@ button {
 
 .quote {
     background-color: #e5e7eb;
-    padding: 50px 100px;
+    padding: 50px 300px;
     display: flex;
     flex-direction: column;
+    align-items: center;
 }
-.quoter{
+
+.quoter {
     align-self: flex-end;
 }
 
@@ -101,6 +103,45 @@ button {
     color: #1f2937;
 }
 
-.footer{
+.footer,
+.title,
+.info-con {
     text-align: center;
+}
+
+.p-img,
+button,
+.action {
+    border-radius: 5px;
+}
+
+.p-img {
+    border: 3px solid #3882f6;
+
+    height: 150px;
+    width: 150px;
+}
+
+.info-con {
+    max-width: 150px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.container {
+    padding-bottom: 100px;
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+}
+
+.placeholder{
+    flex: 2 0 auto;
+    background-color: gray;
+    height: 200px;
+    width: 400px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
